# ts3gamevoice

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  gamevoice.sln  gamevoice.txt  gamevoice.vcxproj  package.ini  package_x64.ini  package_x86.ini  readme.txt
.build/: MSBuild.Community.Tasks.targets
.github/: FUNDING.yml
include/: clientlib_publicdefinitions.h  plugin_definitions.h  public_definitions.h  public_errors.h  public_errors_rare.h  public_rare_definitions.h  ts3_functions.h
src/: gamevoice_functions.c  gamevoice_functions.h  gamevoice_helpers.c  gamevoice_helpers.h  plugin.c  plugin.c.bak  plugin.h  stdafx.h  ts3_helpers.h  usbHidCommunication.c  usbHidCommunication.h
tests/: gamevoice.tests.vcxproj  stdafx.cpp  unittest1.cpp
